--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,7 @@ h3,h5,h1{
 }
 .whole-footer-wrap{
   background-color: #002040;
+  padding: 14px 0;
 }
 .footer-wrap li{
   list-style-type: none;
@@ -581,6 +582,7 @@ h3,h5,h1{
 
 .sub-footer-wrap{
   padding-top: 1rem;
+  margin-top: -31px;
 }
 .footer-wrap{
   margin-bottom: 10px;
@@ -604,6 +606,7 @@ h3,h5,h1{
  }
 .or{
   color: var(--orange); 
+  margin: -7px 2px;
 }
 
 
